<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shiz.arduinodronecar.MainActivity" >

    <item
        android:id="@+id/action_example"
        android:title="@string/action_example"
        app:showAsAction="withText|ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/option1"
        android:title="@string/option_one"
        app:showAsAction="never"/>
    <item
        android:id="@+id/option2"
        android:title="@string/option_two"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/option3"
        android:title="@string/option_three"
        app:showAsAction="never">
    </item>

</menu>